--- a/jira-filters/wsb_ops_time-critical.yaml
+++ b/jira-filters/wsb_ops_time-critical.yaml
@@ -6,9 +6,9 @@ Viewers:
   - My organization
 Editors:
   - Joshua Bartholomew
-Query: |-
-project IN ("Western State Agency")
-AND type NOT IN (Task, Habit)
-AND status IN (Active)
-AND updatedDate <= startOfDay()
-ORDER BY duedate ASC, cf[10055] ASC
+Query: >-
+  project IN ("Western State Agency")
+  AND type NOT IN (Task, Habit)
+  AND status IN (Active)
+  AND updatedDate <= startOfDay()
+  ORDER BY duedate ASC, cf[10055] ASC
