--- a/.github/workflows/sync-filters.yml
+++ b/.github/workflows/sync-filters.yml
@@ -10,3 +10,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: main
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
