--- a/.github/workflows/sync-filters.yml
+++ b/.github/workflows/sync-filters.yml
@@ -18,3 +18,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --requirement requirements.txt
+      - name: Run script to update filters
+        run: python scripts/apply_filters.py
