Create variables and replace placeholders

--- a/.github/workflows/sync-filters.yml
+++ b/.github/workflows/sync-filters.yml
@@ -6,9 +6,9 @@ jobs:
   update-filters: 
     runs-on: ubuntu-latest
     env:
-      JIRA_USER_EMAIL: "example@example.com"
-      JIRA_API_TOKEN: "RaNd0mTeXtStR1nG"
-      JIRA_BASE_URL: "https://random.atlassian.com"
+      JIRA_USER_EMAIL: ${{ secrets.PERSONAL_JIRA_INSTANCE_JIRA_ADMIN_USER_LOGIN_EMAIL }}
+      JIRA_API_TOKEN: ${{ secrets.PERSONAL_JIRA_INSTANCE_JIRA_ADMIN_USER_API_TOKEN }}
+      JIRA_BASE_URL: ${{ secrets.PERSONAL_JIRA_BASE_API_URL }}
     steps: 
       - name: Copy main branch to runner
         uses: actions/checkout@v4
