--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,16 @@
 				"github.vscode-github-actions",
 				"donjayamanne.githistory",
 				"eamodio.gitlens",
-				"oderwat.indent-rainbow"
+				"oderwat.indent-rainbow",
+				"GitHub.vscode-pull-request-github",
+				"ms-python.autopep8",
+				"dbaeumer.vscode-eslint",
+				"GitHub.copilot-chat",
+				"GitHub.copilot",
+				"ms-python.vscode-python-envs",
+				"ms-python.debugpy",
+				"ms-python.vscode-pylance",
+				"ms-python.python"
 			]
 		}
 	}
