--- a/jira-filters/10010-pip.yml
+++ b/jira-filters/10010-pip.yml
@@ -17,4 +17,4 @@ jql: >-
   type NOT IN (Task, Habit) 
   AND status IN ("Delegated To", "Meeting With", "Work In Progress") 
   AND project NOT IN ("Midland Garage Door Manufacturing") 
-  ORDER BY duedate ASC, cf[10055] ASC, created ASC
+  ORDER BY cf[10055] ASC, duedate ASC, created ASC
