--- a/jira-filters/10011-next_actions.yml
+++ b/jira-filters/10011-next_actions.yml
@@ -70,4 +70,4 @@ jql: >-
       AND labels = Home_Work
     )
   ) 
-  ORDER BY duedate ASC, cf[10055] ASC, updated ASC
+  ORDER BY cf[10055] ASC, duedate ASC, updated ASC
