--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
 	"name": "Python 3",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:2-3.14-trixie",
-	"runArgs": ["--env-file", "${localWorkspaceFolder}/.env"],
+	"runArgs": ["--env-file", "${localWorkspaceFolder}/.devcontainer/.env"],
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
